--- a/translations/kangyur/translations/087-003_toh498_blue_clad_blessed_vajrapani.xml
+++ b/translations/kangyur/translations/087-003_toh498_blue_clad_blessed_vajrapani.xml
@@ -15,7 +15,7 @@
                 <title type="longTitle" xml:lang="Sa-Ltn">Bhagavannīlāmbara­dhara­vajra­pāṇi­tantra­nāma</title>
                 <title type="otherTitle" xml:lang="zh"/>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Group<lb/> under the patronage and
-                    supervision of 84000: Translating the Words of the Buddha.</author>
+                    supervision of 84000: Translating the Words of the Buddha</author>
                 <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
     <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
                 <author role="translatorEng" ref="contributors.xml#person-61">Catherine Dalton</author>
@@ -25,7 +25,7 @@
             <editor role="TEImarkupEditor" ref="contributors.xml#person-253">Michael Engle</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 3.29.4 <date>2019</date>
+                <edition>v 3.29.6 <date>2019</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,14 +63,14 @@
             
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-19T18:12:47.316Z" user="celso">19/04/2021 18:12:47</note>
+                <note type="lastUpdated" date-time="2022-11-06T15:57:40.021Z" user="admin">06/11/2022 15:57:40</note>
             <note type="updated" update="text-version" value="v 3.26" date-time="2019-06-18T03:01:27.941Z" user="celso">v 3.26 2019</note>
                 <note type="updated" update="text-version" value="v 3.27" date-time="2019-06-21T14:51:26.702Z" user="celso">v 3.27 2019</note>
                 <note type="updated" update="text-version" value="v 3.28" date-time="2019-07-27T10:33:14.394Z" user="laura">v 3.28 2019</note>
 <note type="updated" update="text-version" value="v 3.29.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
 <note type="updated" update="text-version" value="v 3.29.2" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
     <note type="updated" update="text-version" value="3.29.3" date-time="2020-11-23T14:16:59.523Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="3.29.4" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+    <note type="updated" update="text-version" value="3.29.4" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>    <note type="updated" update="text-version" value="3.29.5" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="3.29.6" date-time="2022-11-06T15:57:37.15Z" user="konchog">3 small fixes.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -119,7 +119,8 @@
             </div>
             <div type="introduction">
                 <head type="introduction" tid="258">Introduction</head>
-                <milestone unit="chunk" xml:id="UT22084-087-003-3"/>
+                <div type="section" xml:id="UT22084-087-003-introduction-1">
+                    <milestone unit="chunk" xml:id="UT22084-087-003-3"/>
                 <p tid="4">
                     <title xml:lang="en">The Tantra of the Blue-Clad Blessed Vajrapāṇi</title> is a scripture that, in the
                     fourfold classification that the Tibetans employed to organize their tantric canon, belongs to the “Conduct”
@@ -140,11 +141,11 @@
                     in his right hand he brandishes a vajra. For the Tibetans, and no doubt for Indian tantric practitioners, this
                     form of Vajrapāṇi was highly popular—to the extent that the Kangyur contains no less than seven tantras and
                     two dhāraṇī texts centered on this awakened figure. Of the seven tantras, three (Toh 498, 499, 501)<ref rend="pending" target="https://read.84000.co/translation/toh499.html" inst="compile note, add bibl"/>
-                    <ref rend="pending" target="https://read.84000.co/translation/toh501.html" inst="compile note, add bibl"/> belong to
+                        <ref rend="pending" target="https://read.84000.co/translation/toh501.html" inst="compile note, add bibl"/> belong to
                     the Caryātantra class, while the remaining four (Toh 454, 456, 457, 461)<ref rend="pending" target="https://read.84000.co/translation/toh454.html" inst="compile note, add bibl"/>
-                    <ref rend="pending" target="https://read.84000.co/translation/toh456.html" inst="compile note, add bibl"/>
-                    <ref rend="pending" target="https://read.84000.co/translation/toh457.html" inst="compile note, add bibl"/>
-                    <ref rend="pending" target="https://read.84000.co/translation/toh461.html" inst="compile note, add bibl"/> are found in the class called the
+                        <ref rend="pending" target="https://read.84000.co/translation/toh456.html" inst="compile note, add bibl"/>
+                        <ref rend="pending" target="https://read.84000.co/translation/toh457.html" inst="compile note, add bibl"/>
+                        <ref rend="pending" target="https://read.84000.co/translation/toh461.html" inst="compile note, add bibl"/> are found in the class called the
                     “Unexcelled tantras” (<foreign xml:lang="Bo-Ltn">bla na med pa’i rgyud</foreign>) by Tibetan exegetes. Seen
                     from an historical standpoint, it seems likely that the Blue-Clad Vajrapāṇi of the Caryātantras may have
                     functioned as the prototype for the later Unexcelled tantras associated with this figure. As such, the tantra
@@ -157,13 +158,13 @@
                     commentaries, relate to the later tantras found in the Unexcelled tantra section. We can therefore deduce that
                     the tradition of this deity gained its primary popularity in the later days of the tantric movement in India,
                     where it seems that a particularly colorful group of devotees took to wearing blue robes as the hallmark of
-                    their community<note place="end" xml:id="UT22084-087-003-272">See Davidson (2002) p 204.</note>. In
+                    their community.<note place="end" xml:id="UT22084-087-003-272">See Davidson (2002) p. 204.</note> In
                     the West, however, Blue-Clad Vajrapāṇi has remained surprisingly unexplored, and to date hardly any mention of
                     the deity can be found in modern scholarship. </p>
                 <milestone unit="chunk" xml:id="UT22084-087-003-6"/>
                 <p tid="7">The text begins with the bodhisattva Vajrapāṇi requesting the Buddha Akṣobhya to teach a tantra that
                     can tame all evil spirits that live beneath the ground. The notion that an underworld exists in which various
-                    forms of evil spirits flourish was well developed in Indian Buddhism since the very early days<note place="end" xml:id="UT22084-087-003-273">See Mayer (2007).</note>. Both of the two other
+                    forms of evil spirits flourish was well developed in Indian Buddhism since the very early days.<note place="end" xml:id="UT22084-087-003-273">See Mayer (2007).</note> Both of the two other
                     Caryātantra tantras on Blue-Clad Vajrapāṇi (Toh 499 in seven chapters and Toh 501 in five chapters) share the
                     same theme, unfolding as Vajrapāṇi requests the Buddha to teach the rituals that can tame the nāgas and yakṣas
                     below the ground and, in the process, accomplish the wealth that they guard and repel the disease that they
@@ -318,6 +319,7 @@
                     Buddhist tantra and offers a beautiful example of early tantric literature. We hope that this English
                     translation will open the doors to further engagement with this and other tantras, by both practitioners and
                     scholars of Buddhist tantra alike. </p>
+                </div>
             </div>
         </front>
         <body>
