--- a/translations/kangyur/translations/088-001_toh507,883-the_dharani_for_secret_relics.xml
+++ b/translations/kangyur/translations/088-001_toh507,883-the_dharani_for_secret_relics.xml
@@ -25,7 +25,7 @@
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -68,7 +68,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-28T12:47:30.027Z" user="admin">28/10/2022 12:47:30</note>
+        <note type="lastUpdated" date-time="2022-11-06T18:16:29.158Z" user="admin">06/11/2022 18:16:29</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-11-01T13:40:58.125Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-11-01T13:40:58.125Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-11-08T08:44:48.238Z" user="line-tofte">3</note>
@@ -107,6 +107,7 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-10-25T19:26:33.039Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-10-27T09:49:59.795Z" user="konchog">Numerous fixes throughout documented in an email</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-10-28T12:47:27.212Z" user="martina-cotter">updated notes.</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2022-11-06T18:16:26.298Z" user="andre">Glossary matching revised and activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -940,7 +941,7 @@
             Beijing: mi rigs dpe skrun khang (Minorities Publishing House), 1998.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-088-001-150">
@@ -1589,12 +1590,12 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-088-001-207">
-              <term>leprosy</term>
-              <term xml:lang="Bo-Ltn" status="verified">mdze </term>
-              <term xml:lang="bo">མཛེ།</term>
-              <term xml:lang="Sa-Ltn">kuṣṭha</term>
-            </gloss>
+                        <gloss xml:id="UT22084-088-001-207" type="term" mode="match">
+                            <term>leprosy</term>
+                            <term xml:lang="Bo-Ltn" status="verified">mdzes</term>
+                            <term xml:lang="bo">མཛེས།</term>
+                            <term xml:lang="Sa-Ltn">kuṣṭha</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-088-001-208">
