--- a/translations/kangyur/translations/044-014_toh93-the_sutra_of_the_rsi_vyasas_questions.xml
+++ b/translations/kangyur/translations/044-014_toh93-the_sutra_of_the_rsi_vyasas_questions.xml
@@ -140,7 +140,7 @@
 
 
                         <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -382,7 +382,7 @@
 
 
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-10T18:34:14.981Z" user="john">Harmonization of trailer and colophon</note>
-                        <note type="lastUpdated" date-time="2022-10-14T13:30:16.684Z" user="admin">14/10/2022 13:30:16</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-18T07:35:44.08Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="1.a" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">1.a</note>    <note type="updated" update="text-version" value="1.0.0" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">First published version</note>
+                        <note type="lastUpdated" date-time="2022-11-07T16:33:02.429Z" user="admin">07/11/2022 16:33:02</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-18T07:35:44.08Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="1.a" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">1.a</note>    <note type="updated" update="text-version" value="1.0.0" date-time="2022-10-14T13:30:11.104Z" user="martina-cotter">First published version</note>    <note type="updated" update="text-version" value="1.0.1" date-time="2022-11-07T16:32:59.608Z" user="andre">Glossary matching revised - CG status active</note>
             </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -2952,7 +2952,7 @@
                                                 Reprint, Delhi: Motilal Banarsidass, 1999.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         
                                         <item>
@@ -2968,7 +2968,7 @@
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-044-014-457">
-                                                <term>the Four Great Kings</term>
+                                                <term>Four Great Kings</term>
                                                 <term xml:lang="Bo-Ltn">rgyal po chen po bzhi</term>
                             <term xml:lang="bo">རྒྱལ་པོ་ཆེན་པོ་བཞི།</term>
                                                 <term xml:lang="Sa-Ltn">caturmahārāja</term>
