--- a/translations/kangyur/translations/094-006_toh729,1001-the_dharani_of_tara.xml
+++ b/translations/kangyur/translations/094-006_toh729,1001-the_dharani_of_tara.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.10 <date>2022</date>
+                <edition>v 1.1.11 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-04T14:31:56.421Z" user="admin">04/11/2022 14:31:56</note>
+                <note type="lastUpdated" date-time="2022-11-07T18:10:35.716Z" user="admin">07/11/2022 18:10:35</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:58:10.068Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:58:10.068Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-06-09T09:22:10.724Z" user="line-tofte">2.h</note>
@@ -122,6 +122,7 @@
     <note type="updated" update="text-version" value="1.1.8" date-time="2022-02-15T17:14:58.07Z" user="martina-cotter">audio track ready for distribution</note>
     <note type="updated" update="text-version" value="1.1.9" date-time="2022-10-26T20:08:46.875Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2022-11-04T14:31:53.611Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
+    <note type="updated" update="text-version" value="1.1.11" date-time="2022-11-07T18:10:32.888Z" user="martina-cotter">Added pending links.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -165,7 +166,9 @@
                         While a few texts dedicated to Tārā were translated in the following centuries,<note place="end" xml:id="UT22084-094-006-8">
                             The Denkarma (<title xml:lang="Bo-Ltn">ldan dkar ma</title>) catalog of early translations, for example, lists only two
                             works dedicated to Tārā that were translated during this time. Following Herrmann-Pfandt’s edition (2008), these are no.
-                            439: <title xml:lang="Bo-Ltn">’phags pa lha mo sgrol ma’i mtshan brgya rtsa brgyad pa</title> (<title xml:lang="Sa-Ltn">Tāra­devī­nāmāṣṭa­śataka</title>, Toh 728)<ref rend="pending" target="https://read.84000.co/translation/toh728.html"/> and no. 454: <title xml:lang="Bo-Ltn">’phags pa lha mo sgrol ma ’jigs pa thams cad las sgrol bar bstod pa</title>
+                            439: <title xml:lang="Bo-Ltn">’phags pa lha mo sgrol ma’i mtshan brgya rtsa brgyad pa</title> (<title xml:lang="Sa-Ltn">
+                                <ref target="https://read.84000.co/translation/toh728.html">Tāra­devī­nāmāṣṭa­śataka</ref>
+                            </title>, Toh 728) and no. 454: <title xml:lang="Bo-Ltn">’phags pa lha mo sgrol ma ’jigs pa thams cad las sgrol bar bstod pa</title>
                             (according to Herrmann-Pfandt, the identification of this title remains uncertain). One could further include no. 388:
                                 <title xml:lang="Bo-Ltn">’phags pa spyan ras gzigs kyi yum</title> (<title xml:lang="Sa-Ltn">Avalokiteśvara­mātā­dhāraṇī</title>, <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh725.html">The <term type="ignore">Dhāraṇī</term> “The Mother of <term type="ignore">Avalokiteśvara</term>”</ref>
@@ -287,8 +290,9 @@
                         <title xml:lang="Bo-Ltn">pho brang stod thang ldan dkar gyi chos kyi ’gyur ro cog gi dkar
                             chag</title> [Denkarma]. Toh 4364, Degé Tengyur vol. 206 (sna tshogs, jo), folios 294.b–310.a.</bibl>
                     <bibl xml:id="UT22084-094-006-33">
-                        <title xml:lang="Bo-Ltn">lha mo sgrol ma’i mtshan brgya rtsa brgyad pa</title>
-                        <ref rend="pending" target="https://read.84000.co/translation/toh728.html"/> (<title xml:lang="Sa-Ltn">Tāra­devī­nāmāṣṭa­śataka</title>). Toh 728, Degé Kangyur vol. 94 (rgyud, tsha), folios 219.a–222.a.</bibl>
+                        <title xml:lang="Bo-Ltn">lha mo sgrol ma’i mtshan brgya rtsa brgyad pa</title> (<title xml:lang="Sa-Ltn">
+                            <ref target="https://read.84000.co/translation/toh728.html">Tāra­devī­nāmāṣṭa­śataka</ref>
+                        </title>). Toh 728, Degé Kangyur vol. 94 (rgyud, tsha), folios 219.a–222.a.</bibl>
                     <bibl xml:id="UT22084-094-006-34">Bhattacharyya, Benoytosh, ed. <title xml:lang="en">The Sādhanamālā Vol I</title>. Calcutta:
                         Baptist Mission Press, 1925.</bibl>
                     <bibl xml:id="UT22084-094-006-35">Butön Rinchen Drup (bu ston rin chen grub). “sgrol ma ’jigs pa brgyad skyob kyi sngags.” In
@@ -315,6 +319,9 @@
                     <bibl xml:id="UT22084-094-006-41">Obermiller, Eugéne, trans. and ed. <title xml:lang="en">History of Buddhism (Chos ḥbyung) by
                             Bu-ston.</title> Vol. 2, <title xml:lang="en">The History of Buddhism in India and Tibet</title>. Materialien zur Kunde
                         des Buddhismus 19. Heidelberg: O. Harrassowitz, 1932.</bibl>
+                    <bibl xml:id="UT22084-094-006-52">Samye Translations, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh728.html">The Hundred and Eight Names of the Goddess Tārā</ref>
+                        </title> (Toh 728). 84000: Translating the Words of the Buddha, 2022.</bibl>
                     <bibl xml:id="UT22084-094-006-42">Sonam Gyaltsen. <title xml:lang="en">The Clear Mirror: A Traditional Account of Tibet’s Golden
                             Age</title>. Translated by Taylor McComas. Ithaca, NY: Snow Lion, 1996.</bibl>
                     <bibl xml:id="UT22084-094-006-43">Stevens, Rachael. “Red Tārā: Lineages of Literature and Practice.” PhD diss., Oxford University,
