--- a/translations/kangyur/placeholders/035-012_toh44-12-chapter_12_the_buddha.xml
+++ b/translations/kangyur/placeholders/035-012_toh44-12-chapter_12_the_buddha.xml
@@ -15,11 +15,11 @@
                 <sponsor ref="sponsors.xml#sponsor-193">Nicholas Weeks</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-035-012"/>
                 <date/>
             </publicationStmt>
@@ -35,12 +35,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-10-14T15:36:44.397Z" user="admin">14/10/2020 15:36:44</note>
+                <note type="lastUpdated" date-time="2022-11-09T15:05:20.224Z" user="admin">09/11/2022 15:05:20</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T12:27:25.516Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-03-09T12:27:25.516Z" user="john">3</note>
             
 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-10T07:02:08.499Z" user="andreas">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-14T15:36:41.735Z" user="amy">Auto (update-titles)</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-14T15:36:41.735Z" user="amy">Auto (update-titles)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
