--- a/translations/kangyur/placeholders/035-012_toh44-12-chapter_12_the_buddha.xml
+++ b/translations/kangyur/placeholders/035-012_toh44-12-chapter_12_the_buddha.xml
@@ -4,18 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 12: The Buddha</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi le'u/</title>
                 <title type="otherTitle" xml:lang="zh">佛陀品 </title>
-                <author role="translatorMain" ref="contributors.xml#team-33"/>
-                <author role="translatorEng" ref="contributors.xml#person-199">Dr. Geshe Lozang Jamspal</author>
-                <author role="translatorEng" ref="contributors.xml#person-200">Kaia Fischer</author>
-                <consultant role="projectManager" ref="contributors.xml#person-200">Kaia Fischer</consultant>
+                <author role="translatorMain" ref="eft:team-33"/>
+                <author role="translatorEng" ref="eft:person-199">Lozang Jamspal</author>
+                <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
+                <consultant role="projectManager" ref="eft:person-200">Kaia Fischer</consultant>
+                <author role="translatorEng" ref="eft:person-308">Erin E. Sperry</author>
+                <consultant role="advisor" ref="eft:person-214">Joshua Capitanio</consultant>
                 <sponsor ref="sponsors.xml#sponsor-16">Richard and Carol Weingarten</sponsor>
                 <sponsor ref="sponsors.xml#sponsor-193">Nicholas Weeks</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -35,12 +37,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-09T15:05:20.224Z" user="admin">09/11/2022 15:05:20</note>
+                <note type="lastUpdated" date-time="2022-11-09T15:06:44.147Z" user="admin">09/11/2022 15:06:44</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T12:27:25.516Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-03-09T12:27:25.516Z" user="john">3</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-01-10T07:02:08.499Z" user="andreas">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-14T15:36:41.735Z" user="amy">Auto (update-titles)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-10T07:02:08.499Z" user="andreas">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-14T15:36:41.735Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-09T15:06:37.345Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
