--- a/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
+++ b/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-47">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.4.19 <date>2021</date>
+                <edition>v 1.4.20 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -75,7 +75,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:00:32.755Z" user="admin">26/07/2022 06:00:32</note>
+                <note type="lastUpdated" date-time="2022-11-10T19:32:12.927Z" user="admin">10/11/2022 19:32:12</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-07-02T13:19:52.294Z" user="john">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-09-13T09:10:31.38Z" user="john">2.c</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-19T07:20:48.166Z" user="andreas">v 0.1.0</note>
@@ -166,6 +166,7 @@
                 <note type="updated" update="text-version" value="1.4.17" date-time="2021-12-13T10:38:42.641Z" user="john">Changed title of chapter referenced in Toh 44-20 to match change made there.</note>
                 <note type="updated" update="text-version" value="1.4.18" date-time="2022-06-13T14:30:33.769Z" user="konchog">One small fix to bibliography.</note>
                 <note type="updated" update="text-version" value="1.4.19" date-time="2022-07-26T06:00:24.843Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.4.20" date-time="2022-11-10T19:32:09.986Z" user="john">Minor adjustment of line break in verse 2.118.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -297,9 +298,9 @@
                     <milestone unit="chunk" xml:id="UT22084-057-004-1256"/>
                     <p tid="787">The text is classified not only as a sūtra, but also as a <title xml:lang="Sa-Ltn">dhāraṇī</title>, and in those
                         Kangyurs that have an additional Dhāraṇī section it is duplicated there (as Tōhoku no. 847<note place="end" xml:id="UT22084-057-004-1243">
-                            <p key="toh145" tid="808">Note that there is a discrepancy among various databases for cataloging the Toh 847 version of
+                            <p key="toh145">Note that there is a discrepancy among various databases for cataloging the Toh 847 version of
                                 this text within vol. 100 or 101 of the Degé Kangyur. See Toh 847 <ref target="https://read.84000.co/translation/toh847.html#end-note-UT22084-057-004-1243">note 10</ref> for details.</p>
-                            <p key="toh847" tid="809">The present text (Toh 847), and all those contained in the same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are listed as being located in volume 100 of the Degé Kangyur by the
+                            <p key="toh847">The present text (Toh 847), and all those contained in the same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are listed as being located in volume 100 of the Degé Kangyur by the
                             Buddhist Digital Resource Center (BDRC). However, several other Kangyur databases—including the eKangyur that supplies the
                             digital input version displayed by the 84000 Reading Room—list this work as being located in volume 101. This discrepancy
                             is partly due to the fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign> section are an
@@ -3289,8 +3290,8 @@
                     <lg tid="478">
                         <l>“ ‘Radiating from their right hands</l>
                         <l>Light rays that gather through the power of meritorious acts,</l>
-                        <l>They release a shower of scented water over all the</l>
-                        <l>Buddhafields and worship the lamps of the world.</l>
+                        <l>They release a shower of scented water over all the buddhafields</l>
+                        <l>And worship the lamps of the world.</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-057-004-564"/>
                     <lg tid="479">
