--- a/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
+++ b/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.6 <date>2021</date>
+                <edition>v 1.1.7 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-30T18:49:29.418Z" user="admin">30/11/2021 18:49:29</note>
+                <note type="lastUpdated" date-time="2022-11-10T19:48:11.242Z" user="admin">10/11/2022 19:48:11</note>
                 <note type="updated" update="text-version" value="" date-time="2019-09-25T06:26:52.399Z" user="andreas">0.1 2019</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-12-09T08:33:44.393Z" user="andreas">2.e</note>
@@ -93,6 +93,7 @@
                 <note type="updated" update="text-version" value="1.1.4" date-time="2021-04-29T20:14:25.333Z" user="celso">minor correction to glossary entry</note>
     <note type="updated" update="text-version" value="1.1.5" date-time="2021-08-11T19:42:57.426Z" user="laura">small typo</note>
     <note type="updated" update="text-version" value="1.1.6" date-time="2021-11-30T18:49:25.625Z" user="laura">1.1.6</note>
+    <note type="updated" update="text-version" value="1.1.7" date-time="2022-11-10T19:48:08.422Z" user="john">Replaced "crown protuberance" with uṣṇīṣa.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -390,9 +391,9 @@
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-061-004-40"/>
                     <lg tid="40">
-                        <l>“His crown protuberance circles to the right,</l>
+                        <l>“His uṣṇīṣa circles to the right,</l>
                         <l>Its hair is coiled, and it is perfectly placed.</l>
-                        <l>It resembles the peak of Mt. Meru—</l>
+                        <l>It resembles the peak of Mount Meru—</l>
                         <l>So beautiful is its shape. <ref cRef="F.99.a" type="folio" xml:id="UT22084-061-004-277"/>
                         </l>
                     </lg>
