--- a/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
+++ b/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
@@ -16,11 +16,11 @@
                 <sponsor ref="sponsors.xml#sponsor-32">Frank Lyn and Ivy Lai</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="">
                 <idno xml:id="UT22084-062-013"/>
                 <date/>
             </publicationStmt>
@@ -36,9 +36,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:52:15.891Z" user="admin">26/07/2022 06:52:15</note>
+                <note type="lastUpdated" date-time="2022-11-11T09:16:36.266Z" user="admin">11/11/2022 09:16:36</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T06:52:08.202Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="" date-time="2022-11-11T09:16:30.711Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-11T09:16:30.711Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
