--- a/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/placeholders/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -12,10 +12,10 @@
                 <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
                 <consultant role="projectManager" ref="contributors.xml#person-60">Benjamin Ewing</consultant>
                 <editor role="projectEditor" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
-                <sponsor ref="eft:sponsor-219">anonymous </sponsor>
+                <sponsor ref="eft:sponsor-219">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun.</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:50:05.357Z" user="admin">26/07/2022 07:50:05</note>
+                <note type="lastUpdated" date-time="2022-11-04T13:38:22.082Z" user="cabie-sim">04/11/2022 13:38:22</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-08-17T14:45:05.214Z" user="line-tofte">3</note>
                 <note type="updated" update="publication-date" value="" date-time="2020-08-17T14:45:05.214Z" user="line-tofte"/>
@@ -48,6 +48,7 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-10T10:43:28.635Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-24T05:50:21.594Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T07:49:57.737Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-04T13:38:20.629Z" user="cabie-sim">Auto (update-sponsorship)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
