--- a/translations/kangyur/placeholders/103-003_toh4568-2-chapter_2_overview_of_how_those_teachings_were_preserved_in_this_world.xml
+++ b/translations/kangyur/placeholders/103-003_toh4568-2-chapter_2_overview_of_how_those_teachings_were_preserved_in_this_world.xml
@@ -10,10 +10,10 @@
                 <author role="translatorMain" ref="contributors.xml#team-49"/>
                 <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
                 <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
-                <sponsor ref="eft:sponsor-219">anonymous </sponsor>
+                <sponsor ref="eft:sponsor-219">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun.</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -32,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:49:26.949Z" user="admin">26/07/2022 07:49:26</note>
+                <note type="lastUpdated" date-time="2022-11-04T13:38:01.531Z" user="cabie-sim">04/11/2022 13:38:01</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-22T13:28:00.965Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-22T13:28:00.965Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-22T13:28:34.954Z" user="line-tofte">Auto (update-contributors)</note>
@@ -41,6 +41,7 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-05T16:27:00.733Z" user="mike">summary added</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-24T05:49:52.05Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T07:49:19.331Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-11-04T13:38:00.079Z" user="cabie-sim">Auto (update-sponsorship)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
