--- a/translations/kangyur/placeholders/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
@@ -19,10 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-089-004"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-15T08:48:33.383Z" user="admin">15/09/2022 08:48:33</note>
+                <note type="lastUpdated" date-time="2022-11-15T14:12:22.436Z" user="admin">15/11/2022 14:12:22</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:29:50.789Z" user="line-tofte">Auto (update-contributors)</note>
@@ -53,6 +53,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:47:46.195Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:47:46.195Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:48:25.356Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:12:16.909Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:12:16.909Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
