--- a/translations/kangyur/placeholders/089-005_toh548,894-the_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-005_toh548,894-the_names_of_manjusri.xml
@@ -19,10 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-089-005"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-15T08:49:59.86Z" user="admin">15/09/2022 08:49:59</note>
+                <note type="lastUpdated" date-time="2022-11-15T14:13:23.054Z" user="admin">15/11/2022 14:13:23</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:36:08.472Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:36:08.472Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:36:30.859Z" user="line-tofte">Auto (update-contributors)</note>
@@ -62,6 +62,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:49:11.003Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:49:11.003Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:49:51.855Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:13:17.509Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:13:17.509Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
