--- a/translations/kangyur/placeholders/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
+++ b/translations/kangyur/placeholders/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
@@ -23,10 +23,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-089-006"/>
                 <date/>
             </publicationStmt>
@@ -51,7 +51,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-15T08:51:28.059Z" user="admin">15/09/2022 08:51:28</note>
+                <note type="lastUpdated" date-time="2022-11-15T14:14:17.052Z" user="admin">15/11/2022 14:14:17</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:38:28.251Z" user="line-tofte">Auto (update-contributors)</note>
@@ -66,6 +66,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:50:39.44Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:50:39.44Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:51:19.986Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:14:11.504Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:14:11.504Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
