--- a/translations/kangyur/placeholders/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
@@ -21,10 +21,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-089-007"/>
                 <date/>
             </publicationStmt>
@@ -49,7 +49,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-15T08:52:53.468Z" user="admin">15/09/2022 08:52:53</note>
+                <note type="lastUpdated" date-time="2022-11-15T14:15:13.298Z" user="admin">15/11/2022 14:15:13</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto (update-contributors)</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-09-15T08:52:06.368Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-09-15T08:52:06.368Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:52:45.449Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:15:07.762Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:15:07.762Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
