--- a/translations/tengyur/placeholders/052-010_toh2269-kayakosaamritavajragita.xml
+++ b/translations/tengyur/placeholders/052-010_toh2269-kayakosaamritavajragita.xml
@@ -10,9 +10,10 @@
                 <title xml:lang="bo" type="mainTitle">སྐུའི་མཛོད་འཆི་མེད་རྡོ་རྗེའི་གླུ།</title>
                 <author role="translatorMain" ref="eft:team-49"/>
                 <author role="translatorEng" ref="eft:person-350">Lara Braitstein</author>
+                <author role="translatorEng" ref="eft:person-184">Julia Stenzel</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2021</date>
+                <edition>v 0.0.4 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -33,17 +34,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-10T12:31:14.091Z" user="admin">10/12/2021 12:31:14</note>
+                <note type="lastUpdated" date-time="2022-11-16T08:29:45.936Z" user="admin">16/11/2022 08:29:45</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-2255-2302_PH_new_v2.4.xml" date-time="2021-11-02T13:47:33.72Z" user="admin"/>
-            
-    <note type="updated" update="translation-status" value="3" date-time="2021-12-10T12:30:32.27Z" user="line-tofte">3</note>
-
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:30:32.27Z" user="line-tofte">0.0.1</note>
-
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:30:50.583Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-10T12:31:07.852Z" user="line-tofte">Auto (update-contributors)</note>
-</notesStmt>
+                <note type="updated" update="translation-status" value="3" date-time="2021-12-10T12:30:32.27Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:30:32.27Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:30:50.583Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-10T12:31:07.852Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-16T08:29:40.331Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
